rust/tests/errors/unclosed_if.hyper
if show:
    <p>Hello</p>
else:
    <p>Goodbye</p>
